Update activity component sharing on same activity class

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,18 @@
         android:orientation="vertical"
         >
 
+        <TextView
+            android:id="@+id/from_app_component"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+        <TextView
+            android:id="@+id/from_activity_component"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/username_wrapper"
             android:layout_width="match_parent"
