--- a/app/src/main/res/layout/fragment_hatebu_feed.xml
+++ b/app/src/main/res/layout/fragment_hatebu_feed.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     >
 
     <LinearLayout
@@ -13,6 +14,7 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            tools:listitem="@layout/item_hatebu_feed"
             />
 
     </LinearLayout>
