--- a/app/src/main/res/layout/item_entry_bookmarks.xml
+++ b/app/src/main/res/layout/item_entry_bookmarks.xml
@@ -15,7 +15,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/RecyclerViewItem"
+        style="@style/RecyclerViewContainer"
         android:orientation="vertical"
         >
 
