--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,28 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="RecyclerViewContainer">
+        <item name="android:paddingTop">@dimen/item_padding</item>
+        <item name="android:paddingLeft">@dimen/item_padding</item>
+        <item name="android:paddingRight">@dimen/item_padding</item>
+        <item name="android:paddingBottom">@dimen/item_padding</item>
+    </style>
+
+    <style name="RecyclerViewContainer.Clickable">
+        <item name="android:clickable">true</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
     <style name="RecyclerViewItem">
-        <item name="android:padding">@dimen/item_padding</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
+    </style>
+
+    <style name="RecyclerViewItem.Title">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Subhead</item>
+        <item name="android:paddingBottom">@dimen/item_padding_with_item</item>
     </style>
 
 </resources>
