--- a/app/src/main/res/layout/activity_hatebu_feed_detail.xml
+++ b/app/src/main/res/layout/activity_hatebu_feed_detail.xml
@@ -2,6 +2,7 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
     <data>
@@ -17,32 +18,76 @@
         android:orientation="vertical"
         >
 
-        <TextView
-            android:id="@+id/title"
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{item.title}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            tools:text="Here is the title sometimes very very long characters in this line."
-            />
+            android:layout_margin="8dp"
+            app:cardCornerRadius="2dp"
+            app:cardUseCompatPadding="true"
+            app:cardElevation="2dp"
+            >
 
-        <TextView
-            android:id="@+id/url"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{item.link}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            tools:text="http://hoge.test.com/hoge/fuga_fuga.html"
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
 
-        <TextView
-            android:id="@+id/summary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{item.description}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            tools:text="Content summary, hogehoge."
-            />
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{item.title}"
+                    android:paddingTop="24dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="0dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    tools:text="Here is the title sometimes very very long characters in this line."
+                    />
+
+                <TextView
+                    android:id="@+id/url"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{item.link}"
+                    android:paddingTop="12dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="0dp"
+                    android:maxLines="1"
+                    android:ellipsize="marquee"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    tools:text="http://hoge.test.com/hoge/very_long_long_url_the_difficult_fuga_fuga.html"
+                    />
+
+                <TextView
+                    android:id="@+id/summary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{item.description}"
+                    android:padding="16dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    tools:text="Content summary, hogehoge."
+                    />
+
+                <Button
+                    android:id="@+id/read_more_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="8dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="8dp"
+                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+                    android:text="サイトへ移動"
+                    />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
 
     </LinearLayout>
 </layout>
