--- a/app/src/main/res/layout/item_entry_bookmarks.xml
+++ b/app/src/main/res/layout/item_entry_bookmarks.xml
@@ -2,6 +2,7 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
     <data>
@@ -12,52 +13,56 @@
             />
     </data>
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/RecyclerViewContainer"
-        android:orientation="vertical"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="2dp"
         >
-
-        <TextView
-            android:id="@+id/user"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{bookmark.user}"
-            tools:text="username"
-            />
-
-        <TextView
-            android:id="@+id/comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{bookmark.comment}"
-            tools:text="hatebu comments"
-            />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
+            android:padding="16dp"
             >
 
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/comment"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@{StringUtil.concatenateStringArray(bookmark.tags)}"
-                tools:text="tags"
+                android:text="@{bookmark.comment}"
+                tools:text="hatebu comments"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 />
 
-            <TextView
-                android:id="@+id/timestamp"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{bookmark.timestamp.toString()}"
-                tools:text="2017/5/1 1:2:3"
-                />
+                android:orientation="horizontal"
+                >
+
+                <TextView
+                    android:id="@+id/user"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="@{bookmark.user}"
+                    tools:text="username"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    />
+
+                <TextView
+                    android:id="@+id/timestamp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{bookmark.timestamp.toString()}"
+                    tools:text="2017/5/1 1:2:3"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    />
+
+            </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 </layout>
