--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,11 @@
         <item name="android:paddingBottom">@dimen/item_padding_with_item</item>
     </style>
 
+    <style name="FeedDetailCardContainer">
+        <item name="android:layout_margin">8dp</item>
+        <item name="cardCornerRadius">2dp</item>
+        <item name="cardUseCompatPadding">true</item>
+        <item name="cardElevation">2dp</item>
+    </style>
+
 </resources>
