--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -9,11 +9,19 @@
         android:orientation="vertical"
         >
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/view_pager_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            >
+
+        </android.support.v4.view.ViewPager>
 
     </LinearLayout>
 </layout>
