--- a/app/src/main/res/layout/activity_hatebu_feed_detail.xml
+++ b/app/src/main/res/layout/activity_hatebu_feed_detail.xml
@@ -1,99 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     >
 
     <data>
+
         <variable
             name="item"
             type="jp.gcreate.sample.daggersandbox.model.HatebuFeedItem"
             />
     </data>
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_view"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/FeedDetailCardContainer"
+            android:orientation="vertical"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
             >
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:paddingBottom="0dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="24dp"
+                android:text="@{item.title}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                tools:text="Here is the title sometimes very very long characters in this line."
+                />
 
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{item.title}"
-                    android:paddingTop="24dp"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:paddingBottom="0dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    tools:text="Here is the title sometimes very very long characters in this line."
-                    />
+            <TextView
+                android:id="@+id/url"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="marquee"
+                android:maxLines="1"
+                android:paddingBottom="0dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="12dp"
+                android:text="@{item.link}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                tools:text="http://hoge.test.com/hoge/very_long_long_url_the_difficult_fuga_fuga.html"
+                />
 
-                <TextView
-                    android:id="@+id/url"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{item.link}"
-                    android:paddingTop="12dp"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:paddingBottom="0dp"
-                    android:maxLines="1"
-                    android:ellipsize="marquee"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    tools:text="http://hoge.test.com/hoge/very_long_long_url_the_difficult_fuga_fuga.html"
-                    />
+            <TextView
+                android:id="@+id/summary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@{item.description}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                tools:text="Content summary, hogehoge."
+                />
 
-                <TextView
-                    android:id="@+id/summary"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{item.description}"
-                    android:padding="16dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    tools:text="Content summary, hogehoge."
-                    />
+            <Button
+                android:id="@+id/read_more_button"
+                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp"
+                android:text="サイトへ移動"
+                />
 
-                <Button
-                    android:id="@+id/read_more_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="8dp"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:paddingBottom="8dp"
-                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
-                    android:text="サイトへ移動"
-                    />
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:background="#88fafafa"
+            app:layout_behavior="@string/bottom_sheet_behavior"
+            app:behavior_peekHeight="100dp"
             tools:listitem="@layout/item_entry_bookmarks"
             />
 
-    </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
