Add filter to feeds list
This dose not work with constraint of Realm.
We can not access to object after Realm.close().

--- a/app/src/main/res/layout/item_hatebu_feed.xml
+++ b/app/src/main/res/layout/item_hatebu_feed.xml
@@ -10,6 +10,10 @@
             name="item"
             type="jp.gcreate.product.filteredhatebu.model.HatebuFeedItem"
             />
+        <variable
+            name="isFiltered"
+            type="Boolean"
+            />
     </data>
 
     <LinearLayout
@@ -17,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:alpha="@{isFiltered ? 0.4f : 1f}"
         >
 
         <LinearLayout
