--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="jp.gcreate.product.filteredhatebu.MainActivity"
+        tools:context="jp.gcreate.product.filteredhatebu.activity.MainActivity"
         >
 
         <TextView
