--- a/app/src/main/res/layout/item_hatebu_feed.xml
+++ b/app/src/main/res/layout/item_hatebu_feed.xml
@@ -6,6 +6,7 @@
 
     <data>
 
+        <import type="jp.gcreate.product.filteredhatebu.util.StringUtil" />
         <variable
             name="item"
             type="jp.gcreate.product.filteredhatebu.model.HatebuFeedItem"
@@ -56,14 +57,38 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{item.date}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            tools:text="2011/1/1"
-            />
+            >
+
+            <ImageView
+                android:id="@+id/favicon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:src="@drawable/favicon_placeholder"
+                />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:maxLines="1"
+                android:ellipsize="marquee"
+                android:text="@{StringUtil.cutProtocolFromUrl(item.link)}"
+                tools:text="www.google.com/hoge/abc/def/123/456/789/"
+                />
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{item.date}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                tools:text="2011/1/1"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
 </layout>
