--- a/app/src/main/res/layout/item_hatebu_feed.xml
+++ b/app/src/main/res/layout/item_hatebu_feed.xml
@@ -60,12 +60,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
             >
 
             <ImageView
                 android:id="@+id/favicon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/item_padding_with_item"
                 tools:src="@drawable/favicon_placeholder"
                 />
 
@@ -73,6 +76,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:paddingRight="@dimen/item_padding_with_item"
                 android:maxLines="1"
                 android:ellipsize="marquee"
                 android:text="@{StringUtil.cutProtocolFromUrl(item.link)}"
