--- a/app/src/main/res/layout/item_filter.xml
+++ b/app/src/main/res/layout/item_filter.xml
@@ -5,7 +5,7 @@
 
     <data>
         <variable
-            name="filter"
+            name="item"
             type="jp.gcreate.product.filteredhatebu.model.UriFilter"
             />
     </data>
@@ -23,7 +23,7 @@
             android:id="@+id/filter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{filter.filter}"
+            android:text="@{item.filter}"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             />
 
