Add share link button

--- a/app/src/main/res/layout/activity_hatebu_feed_detail.xml
+++ b/app/src/main/res/layout/activity_hatebu_feed_detail.xml
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="right"
+                android:gravity="right|center_vertical"
                 >
 
                 <Button
@@ -94,6 +94,20 @@
                     android:paddingRight="16dp"
                     android:paddingTop="8dp"
                     android:text="フィルタを追加"
+                    />
+
+                <ImageView
+                    android:id="@+id/share_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="8dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingTop="8dp"
+                    android:src="@drawable/ic_share"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:tint="@color/colorAccent"
                     />
 
             </LinearLayout>
