--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,7 +5,14 @@
     <item
         android:id="@+id/edit_filter"
         android:title="@string/edit_filter"
+        android:icon="@drawable/ic_settings_black"
         app:showAsAction="ifRoom"
+        />
+    <item
+        android:id="@+id/licenses"
+        android:title="@string/licenses"
+        android:icon="@drawable/ic_info_black"
+        app:showAsAction="never"
         />
 
 </menu>
