Update menu layout

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,7 +6,7 @@
         android:id="@+id/edit_filter"
         android:title="@string/edit_filter"
         android:icon="@drawable/ic_settings_black"
-        app:showAsAction="ifRoom"
+        app:showAsAction="never"
         />
     <item
         android:id="@+id/licenses"
