--- a/app/src/main/res/layout/item_hatebu_feed.xml
+++ b/app/src/main/res/layout/item_hatebu_feed.xml
@@ -6,7 +6,7 @@
 
     <data>
 
-        <import type="jp.gcreate.product.filteredhatebu.util.StringUtil" />
+        <import type="jp.gcreate.product.filteredhatebu.ui.common.StringUtil" />
         <variable
             name="item"
             type="jp.gcreate.product.filteredhatebu.model.HatebuFeedItem"
