--- a/app/src/main/res/layout/item_filter.xml
+++ b/app/src/main/res/layout/item_filter.xml
@@ -34,7 +34,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/delete_done"
+                android:text="@{@string/delete_done(item.filter)}"
                 android:textColor="@color/white"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 />
