--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,6 +3,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
+        android:id="@+id/reload_feeds"
+        android:title="@string/reload_feeds"
+        android:icon="@drawable/ic_reload"
+        app:showAsAction="ifRoom"
+        />
+    <item
         android:id="@+id/edit_filter"
         android:title="@string/edit_filter"
         android:icon="@drawable/ic_settings_black"
