--- a/app/src/main/res/layout/fragment_hatebu_feed.xml
+++ b/app/src/main/res/layout/fragment_hatebu_feed.xml
@@ -14,6 +14,8 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:fadeScrollbars="false"
             tools:listitem="@layout/item_hatebu_feed"
             />
 
