Use ProgressBar instead of ContentLoadingProgressBar
ContentLoadingProgressBar has delay time.
So if we push reload button progress bar showed after few delay.
It's not smoothly.

--- a/app/src/main/res/layout/fragment_hatebu_feed.xml
+++ b/app/src/main/res/layout/fragment_hatebu_feed.xml
@@ -19,7 +19,7 @@
             tools:listitem="@layout/item_hatebu_feed"
             />
 
-        <android.support.v4.widget.ContentLoadingProgressBar
+        <ProgressBar
             android:id="@+id/progress_bar"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
