--- a/app/src/main/res/layout/activity_hatebu_feed_detail.xml
+++ b/app/src/main/res/layout/activity_hatebu_feed_detail.xml
@@ -114,19 +114,54 @@
             </LinearLayout>
         </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
+        <FrameLayout
+            android:id="@+id/bottom_sheet_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:background="#88fafafa"
-            android:scrollbars="vertical"
-            android:fadeScrollbars="false"
             app:layout_behavior="@string/bottom_sheet_behavior"
             app:behavior_peekHeight="100dp"
-            tools:listitem="@layout/item_entry_bookmarks"
-            />
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            >
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#88fafafa"
+                android:scrollbars="vertical"
+                android:fadeScrollbars="false"
+                tools:listitem="@layout/item_entry_bookmarks"
+                />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/comment_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardUseCompatPadding="true"
+                app:cardElevation="2dp"
+                android:visibility="gone"
+                >
+
+                <TextView
+                    android:id="@+id/comment_status_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_comments"
+                    android:padding="@dimen/item_padding"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                    />
+
+            </android.support.v7.widget.CardView>
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                />
+
+        </FrameLayout>
     </android.support.design.widget.CoordinatorLayout>
 </layout>
