--- a/app/src/main/res/layout/item_entry_bookmarks.xml
+++ b/app/src/main/res/layout/item_entry_bookmarks.xml
@@ -20,10 +20,9 @@
         app:cardElevation="2dp"
         >
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:padding="16dp"
             >
 
@@ -32,37 +31,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@{bookmark.comment}"
+                android:autoLink="web"
                 tools:text="hatebu comments"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/user"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                android:text="@{bookmark.user}"
+                tools:text="username"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/comment"
+                app:layout_constraintRight_toLeftOf="@+id/timestamp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
 
-                <TextView
-                    android:id="@+id/user"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="@{bookmark.user}"
-                    tools:text="username"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    />
+            <TextView
+                android:id="@+id/timestamp"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:text="@{bookmark.timestamp.toString()}"
+                tools:text="2017/5/1 1:2:3"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintLeft_toRightOf="@+id/user"
+                app:layout_constraintTop_toBottomOf="@+id/comment"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
 
-                <TextView
-                    android:id="@+id/timestamp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{bookmark.timestamp.toString()}"
-                    tools:text="2017/5/1 1:2:3"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    />
+        </android.support.constraint.ConstraintLayout>
 
-            </LinearLayout>
-
-        </LinearLayout>
     </android.support.v7.widget.CardView>
 </layout>
