Show filtered feed information and delete ArchiveFilter
追加したフィルタとそのフィルタにかかっている記事の数を表示
アーカイブした記事は記事一覧で確認できるようにするためArchiveFeedFragmentは不要

--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -5,9 +5,10 @@
           android:icon="@drawable/ic_inbox"
           />
 
-    <item android:id="@+id/navigation_archive"
-          android:title="@string/bottom_navigation_archive"
-          android:icon="@drawable/ic_archive"
+    <item
+        android:id="@+id/navigation_filter"
+        android:title="@string/bottom_navigation_filter"
+        android:icon="@drawable/ic_filter"
           />
 
     <item android:id="@+id/navigation_favorite"
