--- a/app/src/main/res/layout/fragment_feed_detail.xml
+++ b/app/src/main/res/layout/fragment_feed_detail.xml
@@ -66,7 +66,7 @@
             <TextView
                 android:id="@+id/summary"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:padding="16dp"
                 android:text="@{item.summary}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -74,7 +74,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/url"
                 app:layout_constraintBottom_toTopOf="@+id/share_button"
-                tools:text="@tools:sample/lorem/"
+                tools:text="@tools:sample/lorem/random"
                 />
 
 
